Fix card display on narrow screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -69,8 +69,8 @@ section{
 
 @media only screen and (max-width: 920px) {
   section {
-    width: 100%;
-    padding: 0 30px 0 30px;
+    width: 90%;
+    padding: 0 5% 0 5%;
   }
 }
 
@@ -416,7 +416,16 @@ footer p, header p{
   display: block;
   width: 100%;
   height: 100%;
+  aspect-ratio: 1 / 1;
   text-decoration: none;
+}
+
+@media only screen and (max-width: 460px) {
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 12px;
+  }
 }
 // CARDS
 
@@ -424,7 +433,7 @@ footer p, header p{
 footer{
   width:100%;
   padding:0px;
-  position:fixed;
+  position:static;
   bottom: 0;
   margin: 0;
 }
@@ -445,10 +454,5 @@ footer{
   margin-right: auto;
 }
 
-@media only screen and (max-width: 660px) {
-  footer{
-    position: static;
-  }
-}
 // FOOTER
 
